add pagination to main fragment

--- a/app/src/main/res/navigation/nav_favourites_graph.xml
+++ b/app/src/main/res/navigation/nav_favourites_graph.xml
@@ -6,6 +6,6 @@
 
     <fragment
         android:id="@+id/favouritesFragment"
-        android:name="com.test.moviesapp.ui.favourites.FavouritesFragment" />
+        android:name="com.test.moviesapp.ui.favourites.FavouriteMoviesFragment" />
 
 </navigation>
