--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="gray">#FF8E8E93</color>
     <color name="lightGray">#FFF6F6F6</color>
+    <color name="customGreen">#FF04c988</color>
 </resources>
